tests/negative/neg_pr115_same_line_missing_semicolon.safe
package neg_pr115_same_line_missing_semicolon

   subtype counter is integer (0 to 10)

   function broken returns counter

      return 0 return 1

